--- a/Portfolio-main/src/components/About.css
+++ b/Portfolio-main/src/components/About.css
@@ -18,10 +18,11 @@
 
 .service-list {
     /* border: 5px solid white; */
-    display: grid;
-    grid-template-columns: 1fr;
+    /* display: grid;
+    grid-template-columns: 1fr; */
     gap: 20px;
     display: flex;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -34,7 +35,24 @@
     border-radius: 14px;
     box-shadow: var(--shadow-2);
     z-index: 1;
-    height: 30vh;
+    height: 35vh;
+    width: 100%;
+    border: 1px solid rgba(65, 65, 66, 0.678);
+    background-color: rgba(49, 49, 65, 0.288);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.service-item-mobile {
+    position: relative;
+    background: var(--border-gradient-onyx);
+    padding: 20px;
+    border-radius: 14px;
+    box-shadow: var(--shadow-2);
+    z-index: 1;
+    height: auto;
     width: 100%;
     border: 1px solid rgba(65, 65, 66, 0.678);
     background-color: rgba(49, 49, 65, 0.288);
